--- a/style/main.css
+++ b/style/main.css
@@ -5,7 +5,7 @@ html {
 body {
   font-family: 'Poppins', sans-serif;
   margin: 0;
-  background: url('../img/bg.png') no-repeat center center fixed;
+  background: url('../img/bg2.png') no-repeat center center fixed;
   background-size: cover;
 }
 
